syntax = "proto3";

option go_package = "nem/idl/gen";
option java_multiple_files = true;
option java_package = "github.com/nuzur/nem";
option java_outer_classname = "FieldTypeEnumConfig";

package nem;



message FieldTypeEnumConfig {  
    string enum_uuid = 1;
    bool allow_multiple = 2;    
}
